--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,59 @@
 .vscode/
 build/
 bin/
+target/
+*.png
+*.jpg
+*.jpeg
+*.gif
+*.svg
+*.ico
+*.icns
+*.psd
+*.ai
+*.eps
+*.pdf
+*.doc
+*.docx
+*.xls
+*.xlsx
+*.ppt
+*.pptx
+*.odt
+*.odp
+*.ods
+*.txt
+*.log
+*.csv
+*.json
+*.xml
+*.yml
+*.yaml
+*.md
+*.markdown
+*.html
+*.htm
+*.css
+*.js
+*.jsx
+*.ts
+*.tsx
+*.php
+*.java
+*.class
+*.jar
+*.war
+*.ear
+*.zip
+*.tar
+*.gz
+*.bz2
+*.7z
+*.rar
+*.bak
+*.old
+*.tmp
+*.swp
+*.bak
+*.old
+*.tmp
